# smedjan

./: .gitignore  AUDIT_ROUND2.md  BACKLOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TRAINING_PLAN.md  clippy.toml
.github/: FUNDING.yml
data/: sft_nl2bash.jsonl
docs/: CUDA_BACKEND_SCAFFOLD.md  HANDOFF_adamw_and_efficiency.md  HANDOFF_buffer_hazard_and_followups.md  HANDOFF_drain_bleeding_and_gaps.md  VERIFY_phase_a_and_b_2026-06-14.md
scripts/: cal_battery.sh  ci-mac-poll.sh  ci-mac.plist  ci-mac.sh  cuda_verify_remote.sh  monitor.sh  train-smoke.sh  train_pipeline.sh
src/: api.rs  attention.rs  autograd.rs  checkpoint.rs  data.rs  datapipe.rs  distill.rs  dpo.rs  eval.rs  gated_deltanet.rs  generate.rs  gpu.rs  kv_cache.rs  linear_attention.rs  lora.rs  loss.rs  main.rs  mla.rs  model.rs  optim.rs  quantize.rs  rwkv.rs  safetensors.rs  self_distill.rs  sft.rs  spec_decode.rs  ssm.rs  tensor.rs  tests.rs  tokenizer.rs  train.rs
src/andreos/: compute.rs  mod.rs
src/cuda/: compute.rs  kernels.rs  mod.rs
src/metal/: compute.rs  compute_head.tmp  mod.rs  shaders.rs
