[package]
name = "andreai"
version = "0.1.0"
edition = "2021"
description = "Pure Rust AI engine — own architecture, own training, own tokenizer"

[features]
default = ["metal"]
metal = ["objc2", "objc2-foundation", "objc2-metal"]
cuda = ["cudarc"]
andreos = []  # Zero dependencies — direct hardware access
# Buffer-pool sanitizer (debug/CI only; zero overhead when off). Poisons recycled buffers
# at flush time and can quarantine intra-batch reissue — surfaces use-after-recycle / under-
# dispatch hazards as NaN/divergence instead of silent corruption in a real run.
bufsan = []

[dependencies]
# Metal backend (macOS/Apple Silicon)
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2-metal = { version = "0.3", optional = true }

# CUDA backend (NVIDIA GPUs). cudarc 0.12 needs an explicit CUDA-version feature; 12060 is its
# newest, ABI-forward-compatible with the 12.8 toolkit (PTX JITs to newer archs like sm_120 at runtime).
cudarc = { version = "0.12", optional = true, features = ["cuda-12060"] }

rand = "0.8"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
byteorder = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
