[package]
name = "smedjan"
version = "0.1.3"
edition = "2024"
authors = ["Andrei Dodu <me@andreidodu.se>"]
description = "Pure Rust LLM training and inference engine — own architecture, own training, own tokenizer; Metal and CUDA backends, zero Python."
license = "MIT"
repository = "https://github.com/smedjan/smedjan"
readme = "README.md"
keywords = ["llm", "transformer", "machine-learning", "metal", "cuda"]
categories = ["science", "command-line-utilities"]
# Dev/CI-only files are kept in the git repo but excluded from the published crate.
exclude = ["/data", "/scripts", "/checkpoints", "/logs", "*.bin", "*.log", "corpus.txt", "tok.bin", "dataset.bin"]

[features]
default = ["metal"]
metal = ["objc2", "objc2-foundation", "objc2-metal"]
cuda = ["cudarc"]
# Buffer-pool sanitizer (debug/CI only; zero overhead when off). Poisons recycled buffers
# at flush time and can quarantine intra-batch reissue — surfaces use-after-recycle / under-
# dispatch hazards as NaN/divergence instead of silent corruption in a real run.
bufsan = []

[dependencies]
rand = "0.8"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
byteorder = "1"

# Metal backend (macOS/Apple Silicon only). Target-gated so `default = ["metal"]`
# is safe on Linux — the feature is on but objc2 doesn't pull, and source-level
# cfg gates prevent the Metal modules from compiling.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2-metal = { version = "0.3", optional = true }

# CUDA backend (NVIDIA GPUs). cudarc 0.12 needs an explicit CUDA-version feature; 12060 is its
# newest, ABI-forward-compatible with the 12.8 toolkit (PTX JITs to newer archs like sm_120 at runtime).
[target.'cfg(target_os = "linux")'.dependencies]
cudarc = { version = "0.12", optional = true, features = ["cuda-12060", "cublas", "f16"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
